--- a/draft.tex
+++ b/draft.tex
@@ -481,7 +481,7 @@ Having picked a problem size $(m, n)$, a number of questions $k$ and a strategy,
 
 The results are displayed in \cref{fig:55,fig:1020,fig:p}, where strategies are designated by Rnd for Random, Pes. for Pessimistic, L.\ pes. for Limited pessimistic and 2 ph. for Two phases. 
 
-We observe that the Pessimistic strategy is able to reduce the regret almost completely after $30$ questions. We also see that Limited pessimistic performs almost as well as Pessimistic. This is good news, since for that size, it takes only $2.6s$ for finding a question, compared to $16s$ for Pessimistic.
+We observe that the Pessimistic strategy is able to reduce the regret almost completely after $30$ questions. We also see that Limited pessimistic performs almost as well as Pessimistic; this is good news since (for $m=5$ and $n=5$), the former strategy is much faster and takes only $2.6s$ for a complete elicitation session, while the latter takes $16s$.
 %However, it takes $1000$ times more time than the \strat{Random} strategy ($16s$ of the Pessimistic compared to $0.014s$ of the Random). Moreover, the results of the \strat{Limited pessimistic}, that takes almost $80\%$ less of the time of the \strat{Pessimistic} ($2.6s$), are essentially the same.
 %In Table \ref{fig:1020}, we can see the drop of regret using a bigger instance.
 %Finally in Table \ref{fig:p}
