T3 should start at 20, I suppose.

--- a/draft.tex
+++ b/draft.tex
@@ -486,14 +486,14 @@ We observe that the Pessimistic strategy is able to reduce the regret almost com
 	\begin{center}
 		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
 			\toprule
-			{p} & {Two ph.} & {sd} \\%& {2 ph. vc} & {sd} \\
+			{p} & {Two ph.} & {sd} \\
 			\midrule
-			0 & 100.0 & 0 \\%&  &  \\
-			20 & 18.778 & 0.125 \\%&  &  \\
-			40 & 17.648 & 0.473 \\%&  &  \\
-			60 & 16.460 & 0.609 \\%&  &  \\
-			80 & 15.470 & 0.597 \\%&  &  \\
-			100 & 14.876 & 0.460 \\%&  &  \\
+			0 & 20.0 & 0 \\
+			20 & 18.778 & 0.125 \\
+			40 & 17.648 & 0.473 \\
+			60 & 16.460 & 0.609 \\
+			80 & 15.470 & 0.597 \\
+			100 & 14.876 & 0.460 \\
 			\bottomrule
 		\end{tabular}
 	\end{center}
