--- a/draft.tex
+++ b/draft.tex
@@ -484,20 +484,23 @@ We observe that the Pessimistic strategy is able to reduce the regret almost com
 
 \begin{table}
 	\begin{center}
-		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
+		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]r}
 			\toprule
-			{p} & {Two ph.} & {sd} \\
+			{p} & {Two ph.} \\
 			\midrule
-			0 & 20.0 & 0 \\
-			20 & 18.778 & 0.125 \\
-			40 & 17.648 & 0.473 \\
-			60 & 16.460 & 0.609 \\
-			80 & 15.470 & 0.597 \\
-			100 & 14.876 & 0.460 \\
+			0 & 20.00 \\
+			25 & 18.85 \\
+			50 & 17.29 \\
+			75 & 15.77 \\
+			100 & 14.70 \\
+			125 & 12.99 \\
+			150 & 11.97 \\
+			175 & 9.99 \\
+			200 & 14.87 \\
 			\bottomrule
 		\end{tabular}
 	\end{center}
-	\caption{Regret in problems of size $(10, 20)$ after $100$ questions.}
+	\caption{Regret in problems of size $(10, 20)$ after $200$ questions.}
 	\label{fig:p}
 \end{table}
 
