--- a/draft.tex
+++ b/draft.tex
@@ -500,7 +500,7 @@ We observe that the Pessimistic strategy is able to reduce the regret almost com
 			\bottomrule
 		\end{tabular}
 	\end{center}
-	\caption{Regret in problems of size $(10, 20)$ after $200$ questions.}
+	\caption{Regret in problems of size $(10, 20)$ after $200$ questions (one repetition only).}
 	\label{fig:p}
 \end{table}
 
